# alliance-nft-collection

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: deploy.yml
contracts/: Cargo.toml
contracts/alliance-nft-collection/: Cargo.toml  Makefile.toml  README.md
contracts/alliance-nft-collection/.cargo/: config
contracts/alliance-nft-collection/examples/: schema.rs  schema_collection.rs
contracts/alliance-nft-collection/schema/: alliance-nft-collection.json
contracts/alliance-nft-collection/schema/raw/: execute.json  query.json  response_to_config.json  response_to_minter.json
contracts/alliance-nft-collection/scripts/: deploy.ts  instantiate.ts  migrate.ts  mint.ts  package-lock.json  package.json
contracts/alliance-nft-collection/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/alliance-nft-collection/src/contract/: execute.rs  instantiate.rs  migrate.rs  mod.rs  query.rs  reply.rs
contracts/alliance-nft-collection/src/tests/: custom_querier.rs  cw20_querier.rs  execute.rs  helpers.rs  instantiate.rs  mod.rs  query.rs
contracts/alliance-nft-collection/src/types/: errors.rs  execute.rs  instantiate.rs  migrate.rs  mod.rs  query.rs
contracts/alliance-nft-minter/: Cargo.toml  README.md
contracts/alliance-nft-minter/examples/: schema.rs
contracts/alliance-nft-minter/schema/: alliance-nft-collection.json  alliance-nft-minter.json
contracts/alliance-nft-minter/schema/raw/: instantiate.json  query.json  response_to_cfg.json  response_to_config.json  response_to_nft_data.json  response_to_stats.json
contracts/alliance-nft-minter/scripts/: migrate.ts  mint.ts  package.json
contracts/alliance-nft-minter/src/: lib.rs  state.rs
contracts/alliance-nft-minter/src/contract/: execute.rs  instantiate.rs  migrate.rs  query.rs  reply.rs
contracts/alliance-nft-minter/src/tests/: execute.rs  helpers.rs  instantiate.rs  mod.rs
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: mtd__full.csv  preview-small.csv
frontend/src/: App.module.scss  App.tsx  index.scss  main.tsx
frontend/src/components/: Connect.module.scss  Connect.tsx  index.ts
frontend/src/components/background/: AnimatedBackground.module.scss  AnimatedBackground.tsx
frontend/src/components/checkbox/: checkbox.module.scss  checkbox.tsx
frontend/src/components/filters/: facet.module.scss  facet.tsx  helpers.ts  options.ts
frontend/src/components/filters/dropdowns/: FilterDropdown.module.scss  InhabitantFilter.tsx  ObjectFilter.tsx  PlanetFilter.tsx  index.tsx
frontend/src/components/filters/search/: SearchByID.module.scss  SearchByID.tsx
frontend/src/components/loading/: LoadingCircular.module.scss  circular.tsx
frontend/src/components/navigations/: Navigation.tsx
frontend/src/components/navigations/desktop/: DesktopNav.module.scss  DesktopNav.tsx
frontend/src/components/navigations/mobile/: MobileNav.module.scss  MobileNav.tsx
frontend/src/components/navigations/socials/: index.tsx  socials.module.scss
frontend/src/components/nft/: NFTItem.module.scss  NFTItem.tsx
frontend/src/components/planet/: PlanetDetails.module.scss  PlanetDetails.tsx
frontend/src/components/starmap/: StarMap.module.scss  StarMap.tsx  index.tsx
frontend/src/config/: index.ts  routes.tsx
frontend/src/content/: HowItWorks.mdx  MDX.module.scss  TheStory.mdx
frontend/src/contexts/: AppContext.tsx  index.ts  useAppContext.ts
frontend/src/fakeData/: allNFTs.ts  mockNFTs.ts  planets.ts  planetsByName.tsx
frontend/src/hooks/: index.ts  useAllMintedNFTsFromCollection.tsx  useAllNFTsFromCollection.tsx  useAllianceContracts.tsx  useNFTFromCollection.tsx  useNFTFromMinter.tsx  useUserNFTsFromCollection.tsx  useUserNFTsFromStaking.tsx
frontend/src/pages/: HowItWorks.tsx  HowitWorks.module.scss  NftGallery.tsx  NftView.tsx  TheStory.tsx  index.ts
frontend/src/pages/modal/: ClaimModalPage.tsx  ConnectModalPage.module.scss  ConnectModalPage.tsx  ModalPage.module.scss  NotEligibleModalPage.tsx
frontend/src/pages/nft/: NFTs.module.scss  NFTs.tsx
frontend/src/pages/nft-view/: NFTView.module.scss  NFTView.tsx  NFTViewMobile.module.scss  NFTViewMobile.tsx
frontend/src/pages/planet-view/: PlanetView.module.scss  PlanetView.tsx
frontend/src/pages/story/: Tabs.module.scss  TheStory.module.scss  TheStory.tsx
frontend/src/styles/: _reboot.scss  index.scss  variables.css
frontend/src/types/: AllianceNftCollection.d.ts  AllianceNftMinter.d.ts
frontend/src/utils/: index.ts
scripts/: build_release.sh  deploy.ts  execute-append-nft-metadata.ts  execute-change-owner.ts  execute-change-owners.ts  execute-change-treasury-address.ts  execute-mint-nfts.ts  execute-send-to-dao.ts  instantiate.ts  mint.ts  package-lock.json  package.json  testing-migration-110.ts
scripts/proposals/: create-alliance.ts
