[package]
name          = "alliance-nft-collection"
description   = "Alliance NFT Collection dropped to the Game of Alliance players"
authors       = [
  "Terra Money <engineering@terra.money>",
]
version       = "0.1.0"
edition       = "2018"
license       = "GPL-3.0-or-later"
repository    = "https://github.com/terra-money/alliance-nft-collection"
homepage      = "https://alliance.terra.money/"
documentation = "https://docs.alliance.terra.money/"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std            = { version = "1.1.3", features = ["stargate"] }
cosmwasm-schema         = "1.1.3"
cw2                     = "1.0.1"
cw721                   = { version = "0.18.0" }
cw721-base              = { version = "0.18.0", features = ["library"] }
schemars                = "0.8.11"
cw-storage-plus         = "1.0.1"
cw-utils                = "1.0.1"
serde                   = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror               = "1.0.38"
terra-proto-rs          = { version = "3.0.3", default-features = false }
