[package]
name          = "alliance-nft-collection"
description   = "Alliance NFT Collection dropped to the Game of Alliance players"
authors       = { workspace = true }
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type    = ["cdylib", "rlib"]

[features]
backtraces    = ["cosmwasm-std/backtraces"]
library       = []

[dependencies]
cosmwasm-std            = { workspace = true }
cosmwasm-schema         = { workspace = true }
cw2                     = { workspace = true }
cw721                   = { workspace = true }
cw721-base              = { workspace = true }
schemars                = { workspace = true }
cw-storage-plus         = { workspace = true }
cw-utils                = { workspace = true }
cw-asset                = { workspace = true }
serde                   = { workspace = true }
thiserror               = { workspace = true }
terra-proto-rs          = { workspace = true }
alliance-nft-packages   = { workspace = true }